# Head

# 0.1.20 - 2013 August 28th

- Fix compiler warnings relating to comparing a string literal

# 0.1.19 - 2013 August 24th

- Implemented the RANK() function

# 0.1.18 - 2013 August 23rd

- Implemented the CONCATENATE() function

# 0.1.17 - 2013 August 22nd

- Changed the way that shared targets are converted into a hash to avoid a stack overflow when there are very large numbers of shared formulae in a worksheet.

# 0.1.16 - 2013 August 21st

- Now returns the correct answer when MMULT() is used outside of an array formula

# 0.1.15 - 2013 August 21st

- Now translates formulae that peform arithmetic on ranges, such as SUMPRODUCT(A1:A10, 1/B1:B10)

# 0.1.14 - 2013 August 20th

- Implementing the MMULT function in ruby and C (note only works when entered as an array formula)

# 0.1.13 - 2013 August 19th

- Implemented LOG function in ruby and C
- Now converts the POWER(10,2) function as well as 10^2

# 0.1.12

- Fixed bug in working out how many passes to carry out when trying to eliminate INDIRECT() and other functions

# 0.1.11

- C version Now returns NUM error when trying to do a non integer power of a negative number
- Previously where shared formulae overlapped, the last would win. Now the correct one wins.
- Tests are now output in dependency order, so the first test to fail is likely to be closest to the underlying problem.
- VLOOKUP and HLOOKUP now accept 1 and 0 in place of TRUE and FALSE on their last argument
- Inline strings now have newlines stripped to be consistent with shared strings (it would be better if they were stripped in neither)
- INDEX now returns zero, not blank, when pointing to an empty cell
- If a range points to a single cell, then that is used rather than a range
- Fixed a bug where a nested sum would return 0 rather than an error in C code
- Implementing the HLOOKUP function
- When running in memory mode, now allows old intermediate files to be garbage collected, reducing memory use

# 0.1.10
