@@ -1,5 +1,7 @@
 # Head
 
+- Fixed StringIO#lines is deprecated warning.
+
 # 0.1.20 - 2013 August 28th
 
 - Fix compiler warnings relating to comparing a string literal
